crates/xlate/tests/snapshots/golden_matrix__reason_summary_auto__o4-mini__20260910__responses_to_chat__gpt5_chat.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "What is 17*23? Think, then answer."
    }
  ],
  "reasoning_effort": "medium",
  "max_completion_tokens": 256
}
--- headers ---
upstream_streams: false
--- degraded ---
